{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 356,
  "lineage": "06080abc-b4f0-e381-8c56-29150fa980f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_instance_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e731c8a588258d0d",
            "arn": "arn:aws:ec2:us-east-1:417444384459:instance/i-0c93fef0eb5fa26f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c93fef0eb5fa26f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "aws-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03836277a7930aaf2",
            "private_dns": "ip-10-10-56-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.56.82",
            "public_ip": "52.3.250.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05fca16827896ffe8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c944ebd4a2d4531"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05546bb4542fa5ab1",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c944ebd4a2d4531"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_demo",
            "aws_subnet.aws_instance_subnet_1",
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_instance_VPC_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:internet-gateway/igw-001a0685b2d88eab7",
            "id": "igw-001a0685b2d88eab7",
            "owner_id": "417444384459",
            "tags": {
              "Name": "main_igw_1"
            },
            "tags_all": {
              "Name": "main_igw_1"
            },
            "vpc_id": "vpc-01ba7da6ca694d495"
          },
          "dependencies": [
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_instance_VPC_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:route-table/rtb-047453e5fe44a0f21",
            "id": "rtb-047453e5fe44a0f21",
            "owner_id": "417444384459",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001a0685b2d88eab7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_demo_1"
            },
            "tags_all": {
              "Name": "terra_demo_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ba7da6ca694d495"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_instance_VPC_IGW",
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:security-group/sg-03c944ebd4a2d4531",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c944ebd4a2d4531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_sg",
            "name_prefix": "",
            "owner_id": "417444384459",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01ba7da6ca694d495"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_instance_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:subnet/subnet-05546bb4542fa5ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05546bb4542fa5ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417444384459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_by_terraform_1"
            },
            "tags_all": {
              "Name": "subnet_by_terraform_1"
            },
            "vpc_id": "vpc-01ba7da6ca694d495"
          },
          "dependencies": [
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_instance_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:subnet/subnet-089af9bfb6e213a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089af9bfb6e213a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417444384459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_by_terraform_2"
            },
            "tags_all": {
              "Name": "subnet_by_terraform_2"
            },
            "vpc_id": "vpc-01ba7da6ca694d495"
          },
          "dependencies": [
            "aws_vpc.aws_instance_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_instance_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417444384459:vpc/vpc-01ba7da6ca694d495",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0883fcbd2928e38c3",
            "default_route_table_id": "rtb-08c4174a45081d824",
            "default_security_group_id": "sg-0546e15f71cdaeae8",
            "dhcp_options_id": "dopt-08e68b7c747e9d392",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ba7da6ca694d495",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c4174a45081d824",
            "owner_id": "417444384459",
            "tags": {
              "Name": "VPC_1"
            },
            "tags_all": {
              "Name": "VPC_1"
            }
          }
        }
      ]
    }
  ]
}